# embassy_tests

./: Cargo.toml  justfile
other/: rusb_communication.rs
pystuff/: socket_connection.py
src/old/: usb_ethernet.rs
