[package]
edition = "2021"
name = "HEP_embassy_cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.6.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-futures = { version = "0.1.0" }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1"
heapless = "0.8"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"


#serde = { version = "1.0", default-features = false, features = ["derive"] }
#serde-pickle = { version = "1.0", default-features = false }
#serde = { version = "1.0"}

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
